--- a/css/Form.css
+++ b/css/Form.css
@@ -144,20 +144,18 @@ select {
     letter-spacing: 0px;
     color: #42515f;
     opacity: 1;
-    background: #e9e9e9;
+    background: transparent;
     border: none;
     font-weight: 400;
     min-width: 110px;
     padding: 5px 5px;
     border: 1px solid #707070;
     cursor: pointer;
-    border-radius: 8px;
 }
 
 .submitButton {
-    border: 1px solid #707070;
-    border-radius: 8px;
-    background-color: #e9e9e9;
+    border: none;
+    background-color: #f5f5f5;
     margin-right: 30px;
 }
 
